# idatos

./: Dockerfile  README.md  docker-compose.yml  env.example  init.sql  pyproject.toml
app/: dependencies.py  main.py  models.py  schemas.py
app/routers/: __init__.py  buses.py  realtime.py  schedule.py  stops.py
